[project]
name = "scutes"
description = "Item Processing Application for WHCA Pool Reports Collection"
version = "1.1.2"
requires-python = ">=3.11"
license = {text = "Apache-2.0 license"}
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "asgiref==3.7.2",
    "attrs==23.1.0",
    "beautifulsoup4==4.12.2",
    "certifi==2023.5.7",
    "cffi==1.16.0",
    "charset-normalizer==3.2.0",
    "crispy-bootstrap5==0.7",
    "cryptography==42.0.2",
    "defusedxml==0.7.1",
    "Django==4.2.3",
    "django-auto-logout==0.5.1",
    "django-bootstrap5==23.3",
    "django-crispy-forms==2.0",
    "django-debug-toolbar==4.2.0",
    "django-environ==0.10.0",
    "django-filter==23.2",
    "django-htmx==1.17.2",
    "django-umd-lib-style @ git+https://github.com/umd-lib/django-umd-lib-style.git@main",
    "djangosaml2==1.9.1",
    "elementpath==4.2.0",
    "emoji==2.7.0",
    "exceptiongroup==1.1.2",
    "h11==0.14.0",
    "html-sanitizer==2.2.0",
    "idna==3.4",
    "iniconfig==2.0.0",
    "lxml==5.1.0",
    "mailbox==0.4",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "outcome==1.2.0",
    "packaging==23.1",
    "pandas==2.2.2",
    "pathlib==1.0.1",
    "phonenumbers==8.13.37",
    "Pillow==10.0.0",
    "plotly==5.22.0",
    "pluggy==1.2.0",
    "psycopg2-binary==2.9.7",
    "py==1.11.0",
    "pycparser==2.21",
    "Pygments==2.15.1",
    "pyOpenSSL==24.0.0",
    "pysaml2==7.5.0",
    "PySocks==1.7.1",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.1",
    "pytz==2024.1",
    "PyYAML==6.0",
    "requests==2.31.0",
    "six==1.16.0",
    "sniffio==1.3.0",
    "sortedcontainers==2.4.0",
    "soupsieve==2.5",
    "sqlparse==0.5.0",
    "tenacity==8.2.2",
    "trio==0.22.1",
    "trio-websocket==0.10.3",
    "urllib3==2.0.3",
    "waitress==3.0.0",
    "whitenoise==6.6.0",
    "wsproto==1.2.0",
    "xmlschema==2.5.1",
]

[project.optional-dependencies]
test = [
    "docutils==0.20.1",
    "pytest==7.4.0",
    "pytest-base-url==2.0.0",
    "pytest-cov~=4.1",
    "pytest-datadir==1.4.1",
    "pytest-django==4.5.2",
    "pytest-html==3.2.0",
    "pytest-metadata==3.0.0",
    "pytest-variables==3.0.0",
    "ruff~=0.3",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "scutes.settings"
python_files = ['tests.py', 'test_*.py']
pythonpath = ['src', '.']

[tool.coverage.run]
# these were generated by Django
omit = [
    "asgi.py",
    "manage.py",
    "wsgi.py",
    "src/processing/migrations/*"
]

[project.scripts]
"manage.py" = "scutes:django_manage"

[tool.ruff]
extend-exclude = ["src/processing/migrations/*"]
line-length = 120

[tool.ruff.format]
quote-style = "single"  # Use single quotes for strings

[tool.ruff.lint]
# preview is required to enable many pycodestyle rules see
# https://docs.astral.sh/ruff/rules/
preview = true

# Enable pycodestyle errors and warnings
select = ["E", "W"]